deployments/bluegreen/service.yml
kind: Service
apiVersion: v1
metadata:
  name: app-active
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io.scheme: "http"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3000"
spec:
  selector:
    app: app-blue-green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
kind: Service
apiVersion: v1
metadata:
  name: app-preview
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io.scheme: "http"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "3000"
spec:
  selector:
    app: app-blue-green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
