deployments/bluegreen/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-prod
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: blue-green.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              # Reference to a Service name, also specified in the Rollout spec.strategy.canary.stableService field
              service:
                name: blue-green-prod
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-preview
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: blue-green-preview.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              # Reference to a Service name, also specified in the Rollout spec.strategy.canary.stableService field
              service:
                name: blue-green-preview
                port:
                  number: 80
